// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sankey should caculate the position of an expanded touchpoint 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,321.5333333333333,600,321.5333333333333"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,292.33333333333337C450,292.33333333333337,450,356.5333333333333,600,356.5333333333333"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,423.5333333333333C450,423.5333333333333,450,386.5333333333333,600,386.5333333333333"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,638.5333333333334C450,638.5333333333334,450,501.5333333333333,600,501.5333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div />
    </g>
  </g>
</svg>
`;

exports[`Sankey should change state with willReceiveProps when element is not ready 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div />
    </g>
  </g>
</svg>
`;

exports[`Sankey should render Sankey again when data changes 1`] = `
<div
  width={900}
/>
`;

exports[`Sankey should render Sankey component 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div />
    </g>
  </g>
</svg>
`;

exports[`Sankey should render empty component when is loading 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div>
        empty state
      </div>
    </g>
  </g>
</svg>
`;

exports[`Sankey should render sankey path 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div />
    </g>
  </g>
</svg>
`;

exports[`Sankey should render sankey with empty state 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div>
        direct access
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div>
        direct access
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div>
        direct access
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div>
        direct access
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div>
        direct access
      </div>
    </g>
  </g>
</svg>
`;

exports[`Sankey should render sankey with empty state 2`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div>
        empty state
      </div>
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div>
        empty state
      </div>
    </g>
  </g>
</svg>
`;

exports[`Sankey should test mouseenter on Sankey chart 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#D7D7DA"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#D7D7DA"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#D7D7DA"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div />
    </g>
  </g>
</svg>
`;

exports[`Sankey should test mouseleave on svg group 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,115.33333333333334C450,115.33333333333334,450,278.33333333333337,600,278.33333333333337"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,250.33333333333334C450,250.33333333333334,450,313.33333333333337,600,313.33333333333337"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,380.3333333333333C450,380.3333333333333,450,343.33333333333337,600,343.33333333333337"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,595.3333333333334C450,595.3333333333334,450,458.3333333333333,600,458.3333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div />
    </g>
  </g>
</svg>
`;

exports[`Sankey should test sankey when a item is expanded 1`] = `
<svg
  className="analytics-sankey"
  height={720}
  width={900}
>
  <g
    fill="none"
  >
    <path
      className="analytics-sankey-path"
      d="M300,157.33333333333334C450,157.33333333333334,450,321.5333333333333,600,321.5333333333333"
      data-index={0}
      key="0_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#50D2A0"
      strokeOpacity={0.4}
      strokeWidth={36.66666666666667}
    />
    <path
      className="analytics-sankey-path"
      d="M300,293.53333333333336C450,293.53333333333336,450,356.5333333333333,600,356.5333333333333"
      data-index={1}
      key="1_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#4B9BFF"
      strokeOpacity={0.4}
      strokeWidth={33.333333333333336}
    />
    <path
      className="analytics-sankey-path"
      d="M300,423.5333333333333C450,423.5333333333333,450,386.5333333333333,600,386.5333333333333"
      data-index={2}
      key="2_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FFB46E"
      strokeOpacity={0.4}
      strokeWidth={26.666666666666668}
    />
    <path
      className="analytics-sankey-path"
      d="M300,638.5333333333334C450,638.5333333333334,450,501.5333333333333,600,501.5333333333333"
      data-index={3}
      key="3_path"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      stroke="#FF5F5F"
      strokeOpacity={0.4}
      strokeWidth={203.33333333333334}
    />
  </g>
  <g
    className="svg"
  >
    <g
      className="analytics-sankey-box"
      key="0_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="1_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="2_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="3_node"
    >
      <div />
    </g>
    <g
      className="analytics-sankey-box"
      key="4_node"
    >
      <div />
    </g>
  </g>
</svg>
`;
